2004-06-10 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b187

	* New: Added Config option to allow everybody to see the comment overview, not only admins.

	* Fix: removed bold border around adminbox in some cases.

2004-06-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b186

	* Change: history.go(0) to location.reload() as a possible fix for
	  Mozilla not refreshing the album after upload in embedded environs.

2004-06-10 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b185

	* Fix: Removed some warnings in save_photo

	* Fix: Secure.sh contained a little bug (missing space)
	
	* Fix: progress Status popup was broken when Gallery is embedded

	* Fix: Added new function isSupportedCharset and 3rd Paramater for htmlentities
	  Fixes: #964327

	* Change: Removed link on actual language flag according to:
		http://www.useit.com/alertbox/20031222.html # 10

2004-06-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b184

	* Add:  Re-add secure.sh and configure.sh ... should never
	  have removed them in the first place - they'll be necessary/nice
	  for upgrades.  Also for security-minded people who want to chmod
	  config.php and .htaccess to unwriteable states.  Modified secure.sh
	  to not chmod 0 setup, and to remove setup/resetadmin if it's present.

2004-06-09 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b183

	* New: Add Link to Config Wizard for logged in Admins on Startpage

	* Fix: Gallery didnt work when Users have NO language installed an PHP <= 4.2.0 and/or without gettext

	* Change: Moved Upload mode into group mandatory.

	* Change: Some little text changes in config.

2004-06-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b182

	* Change:  Add an 'uploadMode' option to config wizard to define which
	  method to default to for add_photos.

	* Fix:  Make sure that the user_version is set correctly for new users and for
	  the userdb to prevent the 'upgrading users' notice on a new install.

2004-06-08 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b181
